.metadata/.plugins/org.eclipse.cdt.ui/0708_ILI9341_LCD.build.log
15:30:34 **** Incremental Build of configuration Debug for project 0708_ILI9341_LCD ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_PWR_LDO_SUPPLY -DUSE_HAL_DRIVER -DSTM32H743xx -c -I../Core/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -I"C:/stm32_Harman/0708_ILI9341_LCD/Core/Lib" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:109:24: error: invalid suffix "o" on integer constant
  109 |   /* USER CODE END 2 */9o
      |                        ^~
../Core/Src/main.c:109:26: error: expected ';' before 'while'
  109 |   /* USER CODE END 2 */9o
      |                          ^
      |                          ;
......
  113 |   while (1)
      |   ~~~~~                   
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

15:30:35 Build Failed. 3 errors, 0 warnings. (took 912ms)

